Container/Kubernetes/k3s-soniiit/Graylog/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: graylog
  namespace: graylog
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`graylog.home.soniiit.net`)
      kind: Rule
      services:
        - name: graylog-web
          port: 9000
  tls:
    secretName: home-soniiit-net-selfsigned-tls
